--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,35 @@
 ---
 
-image: alpine
+image: google/cloud-sdk:245.0.0-alpine
 
 stages:
   - test
   - deploy
 
+.deploy:
+  script: |
+    echo ${CLOUD_SERVICE_KEY} | base64 -d > ${HOME}/service-key.json
+    gcloud components install kubectl --quiet
+    gcloud auth activate-service-account --key-file ${HOME}/service-key.json
+    gcloud config set project ${PROJECT}
+    gcloud container clusters get-credentials ${CLUSTER} --zone ${ZONE}
+    kubectl apply --recursive --filename gitlab/
+
 kubeval:
   stage: test
   allow_failure: true
   script: |
-    apk add bash findutils ca-certificates
+    apk add findutils
     wget https://github.com/instrumenta/kubeval/releases/download/0.9.2/kubeval-linux-amd64.tar.gz
     tar xf kubeval-linux-amd64.tar.gz
     cp kubeval /usr/local/bin
     ./bin/kubeval-wrapper.sh
+
+deploy_pre:
+  extends: .deploy
+  stage: deploy
+  environment:
+    name: pre
+    url: https://pre.gitlab.com
+  only:
+    - master
