Adds a container registry configuration for pre
This is a stab at taking what's currently a PoC for pre and creates the
same bits geared towards what we'd like to have running for production.
This only includes the container registry as that is what our currently
OKR's goal indicates.

* Creates a script to assist with the generation of the templated files
  * This script is very crude
  * Uses the provided GITLAB_CHARTS_VERSION to determine which version
  of the chart we should utilize
  * Uses our own helm charts for the generation
* Modifies kubeval to account for some new paths and issues
* Modifies .gitlab-ci with an example of how we'd perform the deploys
* Adds the templated files produced by the generation script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,9 @@ stages:
     gcloud components install kubectl --quiet
     gcloud auth activate-service-account --key-file ${HOME}/service-key.json
     gcloud config set project ${PROJECT}
-    gcloud container clusters get-credentials ${CLUSTER} --zone ${ZONE}
-    kubectl apply --recursive --filename gitlab/
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+    kubectl apply --recursive --filename output/${CI_ENVIRONMENT_SLUG}/handcrafted
+    kubectl apply --recursive --filename output/${CI_ENVIRONMENT_SLUG}/gitlab
 
 kubeval:
   stage: test
