--- a/values.yaml
+++ b/values.yaml
@@ -12,7 +12,7 @@
 # - external Redis
 # - external NGINX
 # - PersistentVolume configuration
-# - external Object Storage providers 
+# - external Object Storage providers
 
 ## The global properties are used to configure multiple charts at once.
 ## Extended documenation at doc/charts/globals.md
@@ -227,7 +227,7 @@ global:
     hostKeys: {}
       # secret:
 
-  ## Rails application secrets 
+  ## Rails application secrets
   ## Secret created according to doc/installation/secrets.md#gitlab-rails-secret
   ## If allowing shared-secrets generation, this is OPTIONAL.
   railsSecrets: {}
@@ -414,6 +414,11 @@ postgresql:
 ## doc/charts/registry/
 registry:
   enabled: true
+  debug:
+    addr: 0.0.0.0:5001
+    prometheus:
+      enabled: true
+      path: '/metrics'
   storage:
     secret: registry-storage
     key: config
@@ -451,13 +456,13 @@ gitlab:
 ## doc/charts/gitlab/migrations
   migrations:
     enabled: false
-## doc/charts/gitlab/unicorn 
+## doc/charts/gitlab/unicorn
   unicorn:
     enabled: false
-## doc/charts/gitlab/sidekiq 
+## doc/charts/gitlab/sidekiq
   sidekiq:
     enabled: false
-## doc/charts/gitlab/gitaly 
+## doc/charts/gitlab/gitaly
   gitaly:
     enabled: false
 ## doc/charts/gitlab/gitlab-shell
