Updates prometheus port to new format

--- a/values.yaml
+++ b/values.yaml
@@ -415,8 +415,8 @@ postgresql:
 registry:
   enabled: true
   debug:
-    addr_host: 0.0.0.0
-    addr_port: 5001
+    addr:
+      port: 5001
     prometheus:
       enabled: true
       path: '/metrics'
