fix the upgrade for staging in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ upgrade_staging:
     - .deploy
     - .staging
   script:
-    - bin/upgrade upgrade
+    - bin/k-ctl upgrade
   only:
     refs:
       - master
