--- a/pre.yaml
+++ b/pre.yaml
@@ -5,4 +5,6 @@ global:
 certmanager-issuer:
   email: jskarbek@gitlab.com
 registry:
+  image:
+    tag: '2.7.0'
   authEndpoint: https://pre.gitlab.com
