Disabled Upload Purging
* This will reduce the memory footprint of the registry service

--- a/input/gstg/registry-storage.yaml
+++ b/input/gstg/registry-storage.yaml
@@ -1,3 +1,6 @@
 gcs:
   bucket: gitlab-gstg-registry
   keyfile: /etc/docker/registry/storage/gcs.json
+  maintenance:
+    uploadpurging:
+      enabled: false
