Use the tagged version of the common.bash script
Sets a new version variable in .gitlab-ci.yml which will be used
to lock the version of `common.bash` for both CI runs and local
runs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,5 @@
 ---
 
-image: "${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:latest"
-
 include:
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/except-com.yml"
@@ -10,7 +8,11 @@ include:
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/shellcheck.yml"
 
+variables:
+  CI_IMAGE_VERSION: 'v1.1.0'
+
 .deploy:
+  image: "${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:$CI_IMAGE_VERSION"
   extends:
     - .except-com
     - .cluster-init-before-script
