--- a/values.yaml
+++ b/values.yaml
@@ -419,14 +419,10 @@ registry:
     egress:
       enabled: true
       # The following rules enable traffic to all external
-      # endpoints, blocks the local network except for
-      # kube dns lookups
-      # https://github.com/kubernetes/kubernetes/issues/55406#issuecomment-343248450
+      # endpoints, except the metadata service and the local
+      # network (except DNS requests)
       rules:
-      - to:
-        - namespaceSelector:
-            matchLabels: {"kube-system": "true"}
-        ports:
+      - ports:
         - protocol: "UDP"
           port: 53
       - to:
@@ -434,6 +430,7 @@ registry:
             cidr: "0.0.0.0/0"
             except:
             - "10.0.0.0/8"
+            - "169.254.169.254/32" # metadata.google.internal
   debug:
     addr:
       port: 5001
