--- a/values.yaml
+++ b/values.yaml
@@ -442,6 +442,7 @@ registry:
       path: '/metrics'
   ingress:
     enabled: false
+  maxReplicas: 20
   service:
     type: LoadBalancer
     annotations:
