Changes logging to json output
Swaps the default plain text format to json output such that we can have
an easier time filtering logs

--- a/values.yaml
+++ b/values.yaml
@@ -442,6 +442,8 @@ registry:
       path: '/metrics'
   ingress:
     enabled: false
+  log:
+    formatter: json
   maxReplicas: 100
   service:
     type: LoadBalancer
