--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@ include:
     file: "/ci/except-com.yml"
     ref: 'v1.7.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
+    file: "/ci/except-ops.yml"
+    ref: 'v1.7.0'
+  - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/cluster-init-before-script.yml"
     ref: 'v1.7.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
@@ -28,7 +31,6 @@ variables:
   extends:
     - .except-com
     - .cluster-init-before-script
-
 
 .pre:
   environment:
@@ -52,8 +54,71 @@ stages:
   - deploy-canary
   - deploy-production
 
+#########################################
+# Container scanning for Registry
+# This is takes the tag that is currently set in
+# the production value file
+
 container_scanning:
   stage: check
+  # This is the imported job
+  # and will never run due to the
+  # following except condition because the imported
+  # job only runs on branches.
+  #
+  # It is necessary
+  # so we can import the job and extend it for
+  # the different environments.
+  except:
+    - branches
+
+# The following environment jobs are identical
+# except they read the tag version from the corresponding
+# environment file
+
+container_scanning_production:
+  extends:
+    - container_scanning
+    - .except-ops
+  variables:
+    GIT_STRATEGY: fetch
+  stage: check
+  before_script:
+    - export CI_APPLICATION_REPOSITORY=docker.io/library/registry
+    - apk add grep
+    - >
+      export CI_APPLICATION_TAG=$(grep -Po "(?<=tag: ')[^']*" gprd.yaml)
+    - echo "Scanning $CI_APPLICATION_REPOSITORY:$CI_APPLICATION_TAG"
+
+container_scanning_staging:
+  extends:
+    - container_scanning
+    - .except-ops
+  variables:
+    GIT_STRATEGY: fetch
+  stage: check
+  before_script:
+    - export CI_APPLICATION_REPOSITORY=docker.io/library/registry
+    - apk add grep
+    - >
+      export CI_APPLICATION_TAG=$(grep -Po "(?<=tag: ')[^']*" gstg.yaml)
+    - echo "Scanning $CI_APPLICATION_REPOSITORY:$CI_APPLICATION_TAG"
+
+container_scanning_pre:
+  extends:
+    - container_scanning
+    - .except-ops
+  variables:
+    GIT_STRATEGY: fetch
+  stage: check
+  before_script:
+    - export CI_APPLICATION_REPOSITORY=docker.io/library/registry
+    - apk add grep
+    - >
+      export CI_APPLICATION_TAG=$(grep -Po "(?<=tag: ')[^']*" pre.yaml)
+    - echo "Scanning $CI_APPLICATION_REPOSITORY:$CI_APPLICATION_TAG"
+
+#########################################
 
 ############################ CI JOBS ################################
 #####################################################################
