Updates the storage config so that it aligns with production

--- a/input/pre/registry-storage.yaml
+++ b/input/pre/registry-storage.yaml
@@ -1,6 +1,10 @@
 gcs:
   bucket: gitlab-pre-registry
   keyfile: /etc/docker/registry/storage/gcs.json
-  maintenance:
-    uploadpurging:
-      enabled: false
+maintenance:
+  uploadpurging:
+    enabled: false
+cache:
+  blobdescriptor: 'inmemory'
+delete:
+  enabled: true
