--- a/values.yaml
+++ b/values.yaml
@@ -34,6 +34,9 @@ ingress:
       hosts:
         - chart-example.local
 
+networkpolicy:
+  enabled: false
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
