--- a/templates/networkpolicy.yaml
+++ b/templates/networkpolicy.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: {{ template "name" . }}
-      release: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ include "plantuml.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   policyTypes:
     {{- if .Values.networkpolicy.egress.enabled }}
     - Egress
