Defaults for networkpolicy

--- a/values.yaml
+++ b/values.yaml
@@ -36,6 +36,13 @@ ingress:
 
 networkpolicy:
   enabled: false
+  egress:
+    enabled: false
+    rules: []
+  ingress:
+    enabled: false
+    rules: []
+  annotations: {}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
