Revert "Use http for service port"
This reverts commit de36da00815fae1f307de760f8db86bae16f433d.

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -26,5 +26,5 @@ spec:
           - path: /*
             backend:
               serviceName: {{ $fullName }}
-              servicePort: http
+              servicePort: {{ .Values.service.port }}
 {{- end }}
