--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,12 +37,12 @@ variables:
     name: pre
     url: https://pre.gitlab.com
 
-.staging:
+.gstg:
   environment:
     name: gstg
     url: https://staging.gitlab.com
 
-.production:
+.gprd:
   environment:
     name: gprd
     url: https://gitlab.com
@@ -50,9 +50,9 @@ variables:
 stages:
   - check
   - dryrun
-  - deploy
-  - deploy-canary
-  - deploy-production
+  - non-prod:deploy
+  - gprd-cny:deploy
+  - gprd:deploy
 
 #########################################
 # Container scanning for Registry
@@ -76,7 +76,7 @@ container_scanning:
 # except they read the tag version from the corresponding
 # environment file
 
-pre_container_scan:
+pre:container_scan:
   extends:
     - container_scanning
     - .except-ops
@@ -90,7 +90,7 @@ pre_container_scan:
       export CI_APPLICATION_TAG=$(grep -Po "(?<=tag: ')[^']*" pre.yaml)
     - echo "Scanning $CI_APPLICATION_REPOSITORY:$CI_APPLICATION_TAG"
 
-gstg_container_scan:
+gstg:container_scan:
   extends:
     - container_scanning
     - .except-ops
@@ -104,7 +104,7 @@ gstg_container_scan:
       export CI_APPLICATION_TAG=$(grep -Po "(?<=tag: ')[^']*" gstg.yaml)
     - echo "Scanning $CI_APPLICATION_REPOSITORY:$CI_APPLICATION_TAG"
 
-gprd_container_scan:
+gprd:container_scan:
   extends:
     - container_scanning
     - .except-ops
@@ -125,7 +125,7 @@ gprd_container_scan:
 
 ### PreProd
 
-pre_dryrun:
+pre:dryrun:
   stage: dryrun
   extends:
     - .deploy
@@ -133,8 +133,8 @@ pre_dryrun:
   script:
     - bin/k-ctl -D upgrade
 
-pre_upgrade:
-  stage: deploy
+pre:upgrade:
+  stage: non-prod:deploy
   extends:
     - .deploy
     - .pre
@@ -146,19 +146,19 @@ pre_upgrade:
 
 ### Staging
 
-gstg_dryrun:
+gstg:dryrun:
   stage: dryrun
   extends:
     - .deploy
-    - .staging
+    - .gstg
   script:
     - bin/k-ctl -D upgrade
 
-gstg_upgrade:
-  stage: deploy
+gstg:upgrade:
+  stage: non-prod:deploy
   extends:
     - .deploy
-    - .staging
+    - .gstg
   script:
     - bin/k-ctl upgrade
   only:
@@ -167,19 +167,19 @@ gstg_upgrade:
 
 ### Canary
 
-canary_dryrun:
+gprd-cny:dryrun:
   stage: dryrun
   extends:
     - .deploy
-    - .production
+    - .gprd
   script:
     - bin/k-ctl -D -s cny upgrade
 
-canary_upgrade:
-  stage: deploy-canary
+gprd-cny:upgrade:
+  stage: gprd-cny:deploy
   extends:
     - .deploy
-    - .production
+    - .gprd
   script:
     - bin/k-ctl -s cny upgrade
   only:
@@ -188,19 +188,19 @@ canary_upgrade:
 
 ### Producion
 
-gprd_dryrun:
+gprd:dryrun:
   stage: dryrun
   extends:
     - .deploy
-    - .production
+    - .gprd
   script:
     - bin/k-ctl -D upgrade
 
-gprd_upgrade:
-  stage: deploy-production
+gprd:upgrade:
+  stage: gprd:deploy
   extends:
     - .deploy
-    - .production
+    - .gprd
   when: manual
   script:
     - bin/k-ctl upgrade
