Revert "Merge branch 'jarv/add-cny-env' into 'master'"
This reverts merge request !56

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,11 +42,6 @@ variables:
     name: gstg
     url: https://staging.gitlab.com
 
-.gprd-cny:
-  environment:
-    name: gprd-cny
-    url: https://gitlab.com
-
 .gprd:
   environment:
     name: gprd
@@ -176,7 +171,7 @@ gprd-cny:dryrun:
   stage: dryrun
   extends:
     - .deploy
-    - .gprd-cny
+    - .gprd
   script:
     - bin/k-ctl -D -s cny upgrade
 
@@ -184,7 +179,7 @@ gprd-cny:upgrade:
   stage: gprd-cny:deploy
   extends:
     - .deploy
-    - .gprd-cny
+    - .gprd
   script:
     - bin/k-ctl -s cny upgrade
   only:
