--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -19,6 +19,9 @@ data:
         if ($http_x_forwarded_proto = 'http') {
              return 301 https://$server_name$request_uri;
         }
+        limit_except GET {
+            deny all;
+        }
         proxy_pass http://localhost:8080/;
         proxy_hide_header access-control-allow-origin;
         add_header X-Frame-Options SAMEORIGIN always;
