Limit the proxy endpoint

--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -12,6 +12,10 @@ data:
 
       server_name {{ .Values.nginx_sidecar.server_name }};
 
+      location ^~ /proxy {
+          deny all;
+      }
+
       location / {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
