--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -12,11 +12,11 @@ data:
 
       server_name {{ .Values.nginx_sidecar.server_name }};
 
-      location ^~ /proxy {
-          deny all;
+      location / {
+          return 301 {{ .Values.nginx_sidecar.redirect_url }};
       }
 
-      location / {
+      location /png {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,7 +26,7 @@ data:
         limit_except GET {
             deny all;
         }
-        proxy_pass http://localhost:8080/;
+        proxy_pass http://localhost:8080/png;
         proxy_hide_header access-control-allow-origin;
         add_header X-Frame-Options SAMEORIGIN always;
       }
