--- a/values.yaml
+++ b/values.yaml
@@ -14,6 +14,7 @@ nginx_sidecar:
   tag: 1.17
   image: nginx
   server_name: www.example.com
+  redirect_url: https://redirect.example.com
 
 nameOverride: ""
 fullnameOverride: ""
