--- a/values.yaml
+++ b/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
+annotations: {}
 
 image:
   repository: plantuml/plantuml-server
@@ -18,6 +19,9 @@ nginx_sidecar:
 
 nameOverride: ""
 fullnameOverride: ""
+
+deployment:
+  annotations: {}
 
 service:
   type: NodePort
