--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     {{ toYaml .Values.deployment.annotations | nindent 4 | trim }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.minReplicas }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "plantuml.name" . }}
@@ -38,12 +38,7 @@ spec:
               path: /png
               port: 80
           resources:
-            limits:
-              cpu: 300m
-              memory: 512Mi
-            requests:
-              cpu: 200m
-              memory: 256Mi
+            {{ toYaml .Values.nginx_sidecar.resources | nindent 12 | trim }}
           volumeMounts:
             - mountPath: /etc/nginx/conf.d
               name: conf
@@ -56,9 +51,8 @@ spec:
               protocol: TCP
           args:
             - "--module=http-forwarded"
-
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{ toYaml .Values.resources | nindent 12 | trim }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
