--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+minReplicas: 2
+maxReplicas: 10
+maxUnavailable: 1
+
 annotations: {}
 
 image:
@@ -16,6 +19,7 @@ nginx_sidecar:
   image: nginx
   server_name: www.example.com
   redirect_url: https://redirect.example.com
+  resources: {}
 
 nameOverride: ""
 fullnameOverride: ""
@@ -48,16 +52,6 @@ backendconfig:
   enabled: false
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
 
 nodeSelector: {}
 
