--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -6,17 +6,45 @@ metadata:
     {{ include "plantuml.labels" . | indent 4 | trim }}
 data:
   nginx.conf: |
+    {{- if .Values.nginx_sidecar.rate_limit.enabled }}
+    limit_req_zone $http_x_forwarded_for zone=pnglimit:{{ .Values.nginx_sidecar.rate_limit.zone_size }} rate={{ .Values.nginx_sidecar.rate_limit.rate }};
+    {{- end }}
+    log_format json_combined escape=json
+    '{'
+      '"remote_addr": "$remote_addr",'
+      '"remote_user": "$remote_user",'
+      '"timestamp": "$time_iso8601",'
+      '"request": "$request",'
+      '"status": "$status",'
+      '"request_time": "$request_time",'
+      '"body_bytes_sent": "$body_bytes_sent",'
+      '"http_referer": "$http_referer",'
+      '"http_user_agent": "$http_user_agent",'
+      '"http_x_forwarded_for": "$http_x_forwarded_for",'
+      '"upstream_response_time": "$upstream_response_time",'
+      '"connection":"$connection",'
+      '"connection_requests": "$connection_requests",'
+      '"connections_active": "$connections_active",'
+      '"connections_reading": "$connections_reading",'
+      '"connections_writing": "$connections_writing",'
+      '"connections_waiting": "$connections_waiting"'
+    '}';
     server {
       listen {{ .Values.service.port }} default_server;
       listen [::]:{{ .Values.service.port }} default_server;
 
       server_name {{ .Values.nginx_sidecar.server_name }};
+      access_log /var/log/nginx/access.log json_combined;
       server_tokens off;
       location / {
           return 301 {{ .Values.nginx_sidecar.redirect_url }};
       }
 
       location /png {
+        {{- if .Values.nginx_sidecar.rate_limit.enabled }}
+        limit_req zone=pnglimit burst={{ .Values.nginx_sidecar.rate_limit.burst }} nodelay;
+        limit_req_status {{ .Values.nginx_sidecar.rate_limit.status_code }};
+        {{- end }}
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
