--- a/templates/hpa.yaml
+++ b/templates/hpa.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.hpa.enabled -}}
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -16,3 +17,4 @@ spec:
     resource:
       name: cpu
       targetAverageUtilization: 75
+{{- end }}
