--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -22,7 +22,11 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
+          {{- if .Values.image.sha256 }}
+          image: "{{ .Values.image.repository }}@sha256:{{ .Values.image.sha256 }}"
+          {{- else }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: web
