--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,4 +22,4 @@ release stable:
            --form "variables[RELEASE_REF]=$CI_COMMIT_REF_NAME"
            https://gitlab.com/api/v4/projects/2860651/trigger/pipeline
   only:
-    - /\Av[0-9]+\.[0-9]+\.[0-9]+(-rc[0-9]+)?\Z/@charts/plantuml
+    - /\Av[0-9]+\.[0-9]+\.[0-9]+(-rc[0-9]+)?\Z/@gitlab-org/charts/plantuml
